--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Nitro Type ⌨  
         </div>
         <div id="start">
-            <span id="start_button" class="start-btn" onclick="location.href='index2.html'">START</span>
+            <span id="start_button" class="start-btn" onclick="location.href='main.html'">START</span>
             <div class="leaderboard" id="score">Do Your Typing Speed To That Level 🎈  </div>
         </div>
         </div>
