Typing speed tester

--- a/main.html
+++ b/main.html
@@ -34,6 +34,11 @@
         id="quote-input"
         placeholder="starts type here......."
       ></textarea>
+      <!-- dropdownlist -->
+      <select id="level"  onclick="changelevel()">
+        <option disabled selected>Change-quote</option>
+        <option value="easy" >Random</option>
+      </select>
       <button id="start-test" onclick="startTest()">Start </button>
       <button id="stop-test" onclick="displayResult()">Stop </button>
       <button id="reset-test" onclick="resttest()">Reset</button>
